Give Beak a cappy

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 			<p>If Beak didn't open, tap the button below 👇</p>
 			<button class="launch-beak">Launch Beak</button>
 
-			<p>If that still doesn't work, copy the code below into beak:</p>
+			<p>If that still doesn't work, copy the code below into Beak:</p>
 			<textarea
 				class="beak-code"
 				rows="4"
