--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
 			<textarea
 				class="beak-code"
 				rows="4"
+				readonly
 				onclick="this.setSelectionRange(0, this.value.length)"
 			></textarea >
 		</div>
