--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet" />
 	<link rel="shortcut icon" href="/assets/favicon.ico" />
 	<meta name="robots" content="noindex">
-	
+
 	<title>Beak - Magic link</title>
 
 	<style>
@@ -152,9 +152,9 @@
 			const createdSearch = new URLSearchParams(search);
 
 			beakCode.innerHTML = createdSearch.toString();
-			
+
 			launchBeak.addEventListener('click', function doClick() {
-				window.open(url);
+				window.open(url, '_self');
 			});
 
 			genieContainer.setAttribute('style', 'display: block;');
